fix: correct next/prev buttons alignment
this requires HTML structural changes as we need to move the controls inside lg-inner div to center
without using javascript

BREAKING CHANGE: This will effect existing lightGallery setup only if have made any style
customizations. the `.lg` div has been renamed to `.lg-content` and lg-inner and controls have been
moved inside `.lg-content`

fix #1045

--- a/src/scss/lightgallery-core.scss
+++ b/src/scss/lightgallery-core.scss
@@ -81,6 +81,7 @@
     opacity: 0.001;
     outline: none;
     will-change: auto;
+    overflow: hidden;
     // For start/end transition
     @include transition(opacity 0.15s ease 0s);
 
@@ -133,16 +134,12 @@
         }
     }
 
-    .lg {
-        height: 100%;
-        width: 100%;
-        position: relative;
-        overflow: hidden;
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 100%;
-        max-height: 100%;
-        outline: none;
+    .lg-content {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
     }
 
     .lg-inner {
